added multiple calculations functionality, decimal places, rounding of large numbers and error message when attempting to divide by 0

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         </div> 
         <div>
             <button class="numbers" id ="0">0</button>
-            <button id="clear">C</button>
+            <button class="numbers" id =".">.</button>
+        
             <button id="equals">=</button>
+            <button id="clear">C</button>
         </div>
         <div>
             <button class="operators" id="add">+</button>
