added delete button for first number of the equation

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div>
             <button class="numbers" id ="0">0</button>
             <button class="numbers" id =".">.</button>
-        
             <button id="equals">=</button>
-            <button id="clear">C</button>
         </div>
         <div>
+            <button id="clear">C</button>
+            <button id="delete">⌫</button>
             <button class="operators" id="add">+</button>
             <button class="operators" id="subtract">-</button>
             <button class="operators" id="multiply">x</button>
