added some basic css styling

--- a/index.html
+++ b/index.html
@@ -11,34 +11,45 @@
         <div id="screen">
             <p id="screendisplay">123456789</p>
         </div>
-        <div>
-            <button class="numbers" id="1">1</button>
-            <button class="numbers" id="2">2</button>
-            <button class="numbers" id="3">3</button>
+        <div class="columns">
+            <div class="firstColumn">
+                <div>
+                    <button class="numbers" id="1">1</button>
+                    <button class="numbers" id="2">2</button>
+                    <button class="numbers" id="3">3</button>
+                </div>
+                <div>
+                    <button class="numbers" id="4">4</button>
+                    <button class="numbers" id="5">5</button>
+                    <button class="numbers" id="6">6</button>
+                </div>
+                <div>
+                    <button class="numbers" id="7">7</button>
+                    <button class="numbers" id="8">8</button>
+                    <button class="numbers" id="9">9</button>
+                </div> 
+                <div>
+                    <button class="numbers" id ="0">0</button>
+                    <button class="numbers" id =".">.</button>
+                    <button id="equals">=</button>
+                </div>
+            </div>
+            <div class="secondColumn">
+                <div>
+                    <button id="clear">C</button>
+                    <button id="delete">⌫</button>
+                </div>
+                <div>
+                    <button class="operators" id="add">+</button>
+                    <button class="operators" id="subtract">-</button>
+                </div>
+                    
+                    <button class="operators" id="multiply">x</button>
+                    <button class="operators" id="divide">÷</button>
+                </div>
+            </div>
         </div>
-        <div>
-            <button class="numbers" id="4">4</button>
-            <button class="numbers" id="5">5</button>
-            <button class="numbers" id="6">6</button>
-        </div>
-        <div>
-            <button class="numbers" id="7">7</button>
-            <button class="numbers" id="8">8</button>
-            <button class="numbers" id="9">9</button>
-        </div> 
-        <div>
-            <button class="numbers" id ="0">0</button>
-            <button class="numbers" id =".">.</button>
-            <button id="equals">=</button>
-        </div>
-        <div>
-            <button id="clear">C</button>
-            <button id="delete">⌫</button>
-            <button class="operators" id="add">+</button>
-            <button class="operators" id="subtract">-</button>
-            <button class="operators" id="multiply">x</button>
-            <button class="operators" id="divide">÷</button>
-        </div>
+        
 
 
     </div>
