second draft of css styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p id="title">Calculator</p>
     <div id="container">
         <div id="screen">
             <p id="screendisplay">123456789</p>
